--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,7 +42,7 @@
                         <div class="card-body">
                             <h3 class="card-title">Saipooja Koyyada</h3>
                             <p class="card-text">Phone: +91 99591 30963</p>
-                            <p class="card-text">Email: <a href="mailto:pujasai02@example.com">pujasai02@example.com</a></p>
+                            <p class="card-text">Email: <a href="mailto:poojasai0207@gmail.com">poojasai0207@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
